--- a/WebApplication2/WebApplication2/Views/Products/Create.cshtml
+++ b/WebApplication2/WebApplication2/Views/Products/Create.cshtml
@@ -1,12 +1,13 @@
-﻿@model WebApplication2.Models.Prodact
+﻿@model WebApplication2.Models.Product
 
 @{
     ViewData["Title"] = "Create";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Create</h1>
 
-<h4>Prodact</h4>
+<h4>Product</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
