--- a/WebApplication2/WebApplication2/Views/Products/Index.cshtml
+++ b/WebApplication2/WebApplication2/Views/Products/Index.cshtml
@@ -1,7 +1,8 @@
-﻿@model IEnumerable<WebApplication2.Models.Prodact>
+﻿@model IEnumerable<WebApplication2.Models.Product>
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Index</h1>
@@ -31,9 +32,9 @@
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ProductId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ProductId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ProductId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
