--- a/WebApplication2/WebApplication2/Views/CategoryImages/Delete.cshtml
+++ b/WebApplication2/WebApplication2/Views/CategoryImages/Delete.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Delete";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Delete</h1>
@@ -21,7 +22,7 @@
             @Html.DisplayNameFor(model => model.Category)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Category.CategoryId)
+            @Html.DisplayFor(model => model.Category.Name)
         </dd class>
     </dl>
     
