--- a/WebApplication2/WebApplication2/Views/CategoryImages/Details.cshtml
+++ b/WebApplication2/WebApplication2/Views/CategoryImages/Details.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Details";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Details</h1>
@@ -20,7 +21,7 @@
             @Html.DisplayNameFor(model => model.Category)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Category.CategoryId)
+            @Html.DisplayFor(model => model.Category.Name)
         </dd>
     </dl>
 </div>
