--- a/WebApplication2/WebApplication2/Views/Categories/Create.cshtml
+++ b/WebApplication2/WebApplication2/Views/Categories/Create.cshtml
@@ -2,30 +2,41 @@
 
 @{
     ViewData["Title"] = "Create";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<h1>יצירת קטגוריה חדשה</h1>
 
-<h4>Category</h4>
+<h4>קטגוריה</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
+	<div class="col-md-4">
+		<form enctype="multipart/form-data" asp-action="Ctreate">
+			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+			<div class="form-group">
+				<label asp-for="Name" class="control-label"></label>
+				<input asp-for="Name" class="form-control" />
+				<span asp-validation-for="Name" class="text-danger"></span>
+			</div>
+
+			<div class="form-group">
+				<label asp-for="img" class="control-label"></label>
+				<div class="custom-file">
+					<input asp-for="img" class="custom-file-input" id="customFile">
+					<label class="custom-file-label" for="customFile">Choose file</label>
+				</div>
+				<span asp-validation-for="img" class="text-danger"></span>
+			</div>
+
+			<div class="form-group">
+				<input type="submit" value="Ctreate" class="btn btn-primary" />
+			</div>
+		</form>
+	</div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+	<a asp-action="Index">חזרה לרשימת קטגוריות</a>
 </div>
 
 @section Scripts {
