--- a/WebApplication2/WebApplication2/Views/Categories/Edit.cshtml
+++ b/WebApplication2/WebApplication2/Views/Categories/Edit.cshtml
@@ -2,15 +2,16 @@
 
 @{
     ViewData["Title"] = "Edit";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
+<h1>עריכה</h1>
 
-<h4>Category</h4>
+<h4>קטגוריה</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form enctype="multipart/form-data"  asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="CategoryId" />
             <div class="form-group">
@@ -18,15 +19,27 @@
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
+			<div class="form-group">
+				<label asp-for="img" class="control-label"></label>
+				<div class="custom-file">
+					<input asp-for="img" class="custom-file-input" id="customFile">
+					<label class="custom-file-label" for="customFile">תמונה חדשה</label>
+				</div>
+				<span asp-validation-for="img" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label for="imgDisplay" class="control-label">תמונה נוכחית</label>				
+                <img src="/@Model.imgPath" />					
+			</div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="שמירה" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">חזרה לרשימת קטגוריות</a>
 </div>
 
 @section Scripts {
