--- a/WebApplication2/WebApplication2/Views/Categories/Index.cshtml
+++ b/WebApplication2/WebApplication2/Views/Categories/Index.cshtml
@@ -1,35 +1,48 @@
 ﻿@model IEnumerable<WebApplication2.Models.Category>
-
+@using Microsoft.AspNetCore.Authorization
+@inject IAuthorizationService AuthorizationService
 @{
-    ViewData["Title"] = "Index";
+	ViewData["Title"] = "Index";
+	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>קטגוריות</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+	<a asp-action="Create">צור קטגוריה חדשה</a>
 </p>
 <table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.CategoryId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CategoryId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CategoryId">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
+	<thead>
+		<tr>
+			<th>
+				@Html.DisplayNameFor(model => model.Name)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.imgPath)
+			</th>
+			<th></th>
+		</tr>
+	</thead>
+	<tbody>
+		@foreach (var item in Model)
+		{
+			<tr>
+				<td>
+					@Html.DisplayFor(modelItem => item.Name)
+				</td>
+				<td>
+					<img height="40" width="40" src="@item.imgPath" />
+				</td>
+				<td>
+					@if (User.Identity.IsAuthenticated && User.IsInRole(nameof(TypeUser.admin)))						
+						{
+							<a asp-action="Edit" asp-route-id="@item.CategoryId">עריכה</a>
+							<span>|</span>
+							<a asp-action="Delete" asp-route-id="@item.CategoryId">מחיקה</a>
+						}
+					@*<a asp-action="Details" asp-route-id="@item.CategoryId">Details</a> |*@
+					</td>
+			</tr>
+		}
+	</tbody>
 </table>
