--- a/WebApplication2/WebApplication2/Views/Categories/Index.cshtml
+++ b/WebApplication2/WebApplication2/Views/Categories/Index.cshtml
@@ -2,94 +2,97 @@
 @using Microsoft.AspNetCore.Authorization
 @inject IAuthorizationService AuthorizationService
 @{
-    ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+	ViewData["Title"] = "Index";
+	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1 style="text-align: center;">קטגוריות</h1>
 
 <p style="text-align: right;">
-    <a class="createCategory" asp-action="Create">צור קטגוריה חדשה</a>
+	<a class="createCategory" asp-action="Create">צור קטגוריה חדשה</a>
 </p>
 <div class="categories">
-    @foreach (var item in Model)
-    {
-    <div class="category-container">
-        <div class="category">
-            <div class="category-name">
-                @Html.DisplayFor(modelItem => item.Name)
-            </div>
-            <div>
-                <img class="category-image" src="@item.imgPath" />
-            </div>
-            <div>
-                @if (User.Identity.IsAuthenticated && User.IsInRole(nameof(TypeUser.admin)))
-                {
-                    <a asp-action="Edit" asp-route-id="@item.CategoryId">עריכה</a>
-                    <span>|</span>
-                    <a asp-action="Delete" asp-route-id="@item.CategoryId">מחיקה</a>
-                }
-            </div>
-        </div>
-    </div>
-    }
+	@foreach (var item in Model)
+	{
+	<div class="category-container">
+		<a asp-action="Details" asp-route-id="@item.CategoryId">
+		<div class="category">
+			<div class="category-name">
+				@Html.DisplayFor(modelItem => item.Name)
+			</div>
+			<div>
+				<img class="category-image" src="@item.imgPath" />
+			</div>
+		</div>
+		</a>
+		<div>
+			@if (User.Identity.IsAuthenticated && User.IsInRole(nameof(TypeUser.admin)))
+			{
+				<a asp-action="Edit" asp-route-id="@item.CategoryId">עריכה</a>
+				<span>|</span>
+				<a asp-action="Delete" asp-route-id="@item.CategoryId">מחיקה</a>
+			}
+		</div>
+	</div>
+	}
 </div>
 
+
 <style>
-    .categories {
-        display: flex;
-        flex-wrap: wrap;
-    }
+	.categories {
+		display: flex;
+		flex-wrap: wrap;
+	}
 
-    .category-container {
-        width: calc(33% - 50px);
-        margin-left: 50px;
-        margin-bottom: 50px;
-    }
+	.category-container {
+		width: calc(33% - 50px);
+		margin-left: 50px;
+		margin-bottom: 50px;
+	}
 
-    .category {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-        background-color: #eaeded;
-        width: 250px;
-        height: 250px;
-        padding: 20px;
-        box-sizing: content-box;
-        border-radius: 15px;
-        cursor: pointer;
-    }
+	.category {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: space-between;
+		background-color: #eaeded;
+		width: 250px;
+		height: 250px;
+		padding: 20px;
+		box-sizing: content-box;
+		border-radius: 15px;
+		cursor: pointer;
+	}
 
-    .category:hover {
-        box-shadow: 0px 0px 23px 5px rgba(0,0,0,0.43);
-    }
+		.category:hover {
+			box-shadow: 0px 0px 23px 5px rgba(0,0,0,0.43);
+		}
 
-    .category-name {
-        font-size: 23px;
-        margin-left: 15px;
-    }
+	.category-name {
+		font-size: 23px;
+		margin-left: 15px;
+	}
 
-    .category-image {
-        max-height: 200px;
-        width: 250px;
-    }
+	.category-image {
+		max-height: 200px;
+		width: 250px;
+	}
 
-    .createCategory {
-        color: white;
-        padding: 7px 10px;
-        background: #0078fa;
-        border-radius: 15px;
-        text-decoration: none;
-    }
+	.createCategory {
+		color: white;
+		padding: 7px 10px;
+		background: #0078fa;
+		border-radius: 15px;
+		text-decoration: none;
+	}
 
-    .createCategory:hover {
-        color: white;
-        background: #0056b3;
-        text-decoration: none;
-    }
+		.createCategory:hover {
+			color: white;
+			background: #0056b3;
+			text-decoration: none;
+		}
 
-    tr {
-        text-align: right;
-    }
+	tr {
+		text-align: right;
+	}
 </style>
