--- a/WebApplication2/WebApplication2/Views/productImages/Delete.cshtml
+++ b/WebApplication2/WebApplication2/Views/productImages/Delete.cshtml
@@ -1,7 +1,8 @@
 ﻿@model WebApplication2.Models.productImage
 
 @{
-    ViewData["Title"] = "Delete";
+	ViewData["Title"] = "Delete";
+	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Delete</h1>
@@ -14,9 +15,9 @@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Image)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Image)
-        </dd>
+		<dd class="col-sm-10">
+			<img height="40" width="40" src="/@Model.Image" />
+		</dd>
     </dl>
     
     <form asp-action="Delete">
