--- a/WebApplication2/WebApplication2/Views/Categories/Edit.cshtml
+++ b/WebApplication2/WebApplication2/Views/Categories/Edit.cshtml
@@ -18,7 +18,7 @@
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
+            </div>                    
 			<div class="form-group">
 				<label asp-for="img" class="control-label"></label>
 				<div class="custom-file">
@@ -33,6 +33,42 @@
 			</div>
             <div class="form-group">
                 <input type="submit" value="שמירה" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+    <div class="col-md-4">
+        <form asp-action="AddProduct">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="CategoryId" />        
+            <input type="hidden" asp-for="Name" />        
+            <input type="hidden" asp-for="imgPath" />        
+            <input type="hidden" asp-for="Prodacts" />        
+            <div class="form-group">
+                <label asp-for="ProductIdList" class="control-label"></label>
+                <select asp-for="ProductIdList" multiple="multiple" asp-items="ViewBag.Products" class="form-control" >
+                </select>
+                <span asp-validation-for="ProductIdList" class="text-danger"></span>
+            </div>       
+            <div class="form-group">
+                <input type="submit" value="הוסף מוצר" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+    <div class="col-md-4">
+        <form asp-action="DeleteProduct">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="CategoryId" />        
+            <input type="hidden" asp-for="Name" />        
+            <input type="hidden" asp-for="imgPath" />        
+            <input type="hidden" asp-for="Prodacts" />        
+            <div class="form-group">
+                <label asp-for="ProductIdList" class="control-label"></label>
+                <select asp-for="ProductIdList" multiple="multiple" asp-items="ViewBag.MyProducts" class="form-control" >
+                </select>
+                <span asp-validation-for="ProductIdList" class="text-danger"></span>
+            </div>       
+            <div class="form-group">
+                <input type="submit" value="מחק מוצר" class="btn btn-primary" />
             </div>
         </form>
     </div>
