--- a/WebApplication2/WebApplication2/Views/Products/Index.cshtml
+++ b/WebApplication2/WebApplication2/Views/Products/Index.cshtml
@@ -10,6 +10,9 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<p>
+	<a asp-controller="productImages" asp-action="Create">הוסף תמונה</a>
+</p>
 <table class="table">
     <thead>
         <tr>
@@ -34,7 +37,8 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
+                <a asp-controller="productImages" asp-action="Index" asp-route-id="@item.Id">ערוך תמונות</a>
             </td>
         </tr>
 }
