--- a/WebApplication2/WebApplication2/Views/productImages/Create.cshtml
+++ b/WebApplication2/WebApplication2/Views/productImages/Create.cshtml
@@ -10,17 +10,22 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Image" class="control-label"></label>
-                <input asp-for="Image" class="form-control" />
-                <span asp-validation-for="Image" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+		<form enctype="multipart/form-data" asp-action="Create">
+			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+			<div class="form-group">
+				<label asp-for="img" class="control-label"></label>
+				<div class="custom-file">
+					<input asp-for="img" class="custom-file-input" id="customFile">
+					<label class="custom-file-label" for="customFile">Choose file</label>
+				</div>
+				<span asp-validation-for="img" class="text-danger"></span>
+			</div>
+
+			<select class="form-control" asp-for="ProductId" asp-items="ViewBag.Products"></select>
+			<div class="form-group">
+				<input type="submit" value="Create" class="btn btn-primary" />
+			</div>
+		</form>
     </div>
 </div>
 
