--- a/WebApplication2/WebApplication2/Views/productImages/Edit.cshtml
+++ b/WebApplication2/WebApplication2/Views/productImages/Edit.cshtml
@@ -1,7 +1,8 @@
 ﻿@model WebApplication2.Models.productImage
 
 @{
-    ViewData["Title"] = "Edit";
+	ViewData["Title"] = "Edit";
+	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Edit</h1>
@@ -10,18 +11,26 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Image" class="control-label"></label>
-                <input asp-for="Image" class="form-control" />
-                <span asp-validation-for="Image" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+		<form enctype="multipart/form-data" asp-action="Edit">
+			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+			<input type="hidden" asp-for="Id" />
+			<input type="hidden" asp-for="ProductId" />
+			<<div class="form-group">
+				<label asp-for="img" class="control-label"></label>
+				<div class="custom-file">
+					<input asp-for="img" class="custom-file-input" id="customFile">
+					<label class="custom-file-label" for="customFile">תמונה חדשה</label>
+				</div>
+				<span asp-validation-for="img" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label for="imgDisplay" class="control-label">תמונה נוכחית</label>
+				<img src="/@Model.Image" />
+			</div>
+			<div class="form-group">
+				<input type="submit" value="Save" class="btn btn-primary" />
+			</div>
+		</form>
     </div>
 </div>
 
