--- a/WebApplication2/WebApplication2/Views/productImages/Index.cshtml
+++ b/WebApplication2/WebApplication2/Views/productImages/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@model IEnumerable<WebApplication2.Models.productImage>
 
 @{
-    ViewData["Title"] = "Index";
+	ViewData["Title"] = "Index";
+	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Index</h1>
@@ -21,12 +22,12 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Image)
-            </td>
+			<td>
+				<img class="category-image" src="/@item.Image" />
+			</td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                @*<a asp-action="Details" asp-route-id="@item.Id">Details</a> | *@ 
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
