--- a/WebApplication2/WebApplication2/Views/Orders/Details.cshtml
+++ b/WebApplication2/WebApplication2/Views/Orders/Details.cshtml
@@ -1,24 +1,93 @@
 ﻿@model WebApplication2.Models.Order
 
 @{
-    ViewData["Title"] = "Details";
+	ViewData["Title"] = "Details";
+	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Details</h1>
 
 <div>
-    <h4>Order</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Total)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Total)
-        </dd>
-    </dl>
+	<h4>Order</h4>
+	<hr />
+	<dl class="row">
+		<dt class="col-sm-2">
+			@Html.DisplayNameFor(model => model.Total)
+		</dt>
+		<dd class="col-sm-10">
+			@Html.DisplayFor(model => model.Total)
+		</dd>
+		<dt class="col-sm-2">
+			@Html.DisplayNameFor(model => model.Status)
+		</dt>
+		<dd class="col-sm-10">
+			@Html.DisplayFor(model => model.Status)
+		</dd>
+	</dl>
 </div>
+
+<table class="table">
+	<thead>
+		<tr>
+			<th>
+				שם מוצר
+			</th>
+			<th>
+				מחיר
+			</th>
+			<th></th>
+			<th></th>
+		</tr>
+	</thead>
+	<tbody>
+		@foreach (var item in Model.Prodacts)
+		{
+			<tr>
+				<td>
+					@Html.DisplayFor(modelItem => item.Name)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.Price)
+				</td>
+				<td>
+					<img src="/@item.Pictuers?.FirstOrDefault()" />
+				</td>
+				<td>
+					<a class="btn btn-danger" asp-action="DleleteFromCart" asp-route-id="@item.Id">הסר</a>
+				</td>
+			</tr>
+		}
+
+	</tbody>
+</table>
+
+
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+	<a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+	<a asp-action="Index">Back to List</a>
 </div>
+
+
+
+@*@section Scripts
+{
+	<script>
+		function dleleteFromCart(productId) {
+			$.ajax({
+				url: "/Orders/DleleteFromCart?productId=" + productId,
+				type: "POST",
+				cache: false,
+				async: true,
+				success: function (data) {
+					console.log(data)
+					alert("המוצר הוסר בהצלחה");
+				},
+				error: function (data) {
+					console.log(data)
+					const msg = (data.status === 401) ? "אתה לא מחובר" : "אירעה שגיאה";
+					alert(msg);
+				},
+			});
+		}
+	</script>
+}*@ 
