--- a/WebApplication2/WebApplication2/Views/Categories/Edit.cshtml
+++ b/WebApplication2/WebApplication2/Views/Categories/Edit.cshtml
@@ -29,7 +29,7 @@
 			</div>
 			<div class="form-group">
 				<label for="imgDisplay" class="control-label">תמונה נוכחית</label>				
-                <img src="/@Model.imgPath" />					
+                <img width="50" src="/@Model.imgPath" />					
 			</div>
             <div class="form-group">
                 <input type="submit" value="שמירה" class="btn btn-primary" />
