--- a/WebApplication2/WebApplication2/Views/productImages/Create.cshtml
+++ b/WebApplication2/WebApplication2/Views/productImages/Create.cshtml
@@ -21,7 +21,7 @@
 				<span asp-validation-for="img" class="text-danger"></span>
 			</div>
 
-			<select class="form-control" asp-for="ProductId" asp-items="ViewBag.Products"></select>
+			<select class="form-control" asp-for="_ProductId" asp-items="ViewBag.Products"></select>
 			<div class="form-group">
 				<input type="submit" value="Create" class="btn btn-primary" />
 			</div>
