--- a/WebApplication2/WebApplication2/Views/Categories/Create.cshtml
+++ b/WebApplication2/WebApplication2/Views/Categories/Create.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
 	<div class="col-md-4">
-		<form enctype="multipart/form-data" asp-action="Ctreate">
+		<form enctype="multipart/form-data" asp-action="Create">
 			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 			<div class="form-group">
 				<label asp-for="Name" class="control-label"></label>
@@ -29,7 +29,7 @@
 			</div>
 
 			<div class="form-group">
-				<input type="submit" value="Ctreate" class="btn btn-primary" />
+				<input type="submit" value="Create" class="btn btn-primary" />
 			</div>
 		</form>
 	</div>
