--- a/WebApplication2/WebApplication2/Views/productImages/Edit.cshtml
+++ b/WebApplication2/WebApplication2/Views/productImages/Edit.cshtml
@@ -14,7 +14,7 @@
 		<form enctype="multipart/form-data" asp-action="Edit">
 			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 			<input type="hidden" asp-for="Id" />
-			<input type="hidden" asp-for="ProductId" />
+			@*<input type="hidden" asp-for="ProductId" />*@
 			<<div class="form-group">
 				<label asp-for="img" class="control-label"></label>
 				<div class="custom-file">
