--- a/WebApplication2/WebApplication2/Views/Categories/Index.cshtml
+++ b/WebApplication2/WebApplication2/Views/Categories/Index.cshtml
@@ -9,28 +9,25 @@
 <h1 style="text-align: center;">קטגוריות</h1>
 
 <p style="text-align: right;">
-	<a class="createCategory" asp-action="Create">צור קטגוריה חדשה</a>
+	<a class="button big" asp-action="Create">צור קטגוריה חדשה</a>
 </p>
 <div class="categories">
 	@foreach (var item in Model)
 	{
 	<div class="category-container">
-		<a asp-action="Details" asp-route-id="@item.CategoryId">
-		<div class="category">
+		<a class="category" asp-action="Details" asp-route-id="@item.CategoryId">
 			<div class="category-name">
 				@Html.DisplayFor(modelItem => item.Name)
 			</div>
 			<div>
 				<img class="category-image" src="@item.imgPath" />
 			</div>
-		</div>
 		</a>
-		<div>
+		<div class="action-buttons">
 			@if (User.Identity.IsAuthenticated && User.IsInRole(nameof(TypeUser.admin)))
 			{
-				<a asp-action="Edit" asp-route-id="@item.CategoryId">עריכה</a>
-				<span>|</span>
-				<a asp-action="Delete" asp-route-id="@item.CategoryId">מחיקה</a>
+				<a class="button" asp-action="Edit" asp-route-id="@item.CategoryId">עריכה</a>
+				<a  class="button" asp-action="Delete" asp-route-id="@item.CategoryId">מחיקה</a>
 			}
 		</div>
 	</div>
@@ -39,34 +36,44 @@
 
 
 <style>
+    a {
+        color: inherit;
+    }
+
+    a:hover {
+        color: inherit;
+        text-decoration: none;
+    } 
+
 	.categories {
 		display: flex;
 		flex-wrap: wrap;
 	}
 
-	.category-container {
-		width: calc(33% - 50px);
-		margin-left: 50px;
-		margin-bottom: 50px;
-	}
+    .category-container {
+        width: calc(33% - 50px);
+        margin-left: 50px;
+        margin-bottom: 50px;
+        position: relative;
+    }
 
-	.category {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: space-between;
-		background-color: #eaeded;
-		width: 250px;
-		height: 250px;
-		padding: 20px;
-		box-sizing: content-box;
-		border-radius: 15px;
-		cursor: pointer;
-	}
+    .category {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        background-color: #eaeded;
+        width: 250px;
+        height: 250px;
+        padding: 20px 20px 35px 20px;
+        box-sizing: content-box;
+        border-radius: 15px;
+        cursor: pointer;
+    }
 
-		.category:hover {
-			box-shadow: 0px 0px 23px 5px rgba(0,0,0,0.43);
-		}
+    .category:hover {
+        box-shadow: 0px 0px 23px 5px rgba(0,0,0,0.43);
+    }
 
 	.category-name {
 		font-size: 23px;
@@ -78,21 +85,30 @@
 		width: 250px;
 	}
 
-	.createCategory {
+    .button {
+        color: white;
+        padding: 2px 6px;
+        background: #0078fa;
+        border-radius: 15px;
+        text-decoration: none;
+    }
+
+	.button:hover {
 		color: white;
-		padding: 7px 10px;
-		background: #0078fa;
-		border-radius: 15px;
+		background: #0056b3;
 		text-decoration: none;
 	}
 
-		.createCategory:hover {
-			color: white;
-			background: #0056b3;
-			text-decoration: none;
-		}
+    .button.big {
+        padding: 7px 10px;
+    }
 
 	tr {
 		text-align: right;
 	}
+
+    .action-buttons {
+        position: absolute;
+        margin-top: 7px;
+    }
 </style>
