show base on premmision the header

--- a/WebApplication2/WebApplication2/Views/Shared/_Layout.cshtml
+++ b/WebApplication2/WebApplication2/Views/Shared/_Layout.cshtml
@@ -28,27 +28,48 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">קטגוריות</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">משתמשים</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Index">הזמנות</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">מוצרים</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Clients" asp-action="Login">התחבר</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Clients" asp-action="Register">הרשם</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Clients" asp-action="Logout">התנתק</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="ShoppingCart">עגלת קניות</a>
-                        </li>
+                        @if (User.Identity.IsAuthenticated && User.IsInRole(nameof(TypeUser.admin)))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">משתמשים</a>
+                            </li>
+                        }
+                        @if (User.Identity.IsAuthenticated && User.IsInRole(nameof(TypeUser.admin)))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Index">הזמנות</a>
+                            </li>
+                        }
+                        @if (User.Identity.IsAuthenticated && User.IsInRole(nameof(TypeUser.admin)))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">מוצרים</a>
+                            </li>
+                        }
+                        @if (!User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Clients" asp-action="Login">התחבר</a>
+                            </li>
+                        }
+                        @if (!User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Clients" asp-action="Register">הרשם</a>
+                            </li>
+                        }
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Clients" asp-action="Logout">התנתק</a>
+                            </li>
+                        }
+                        @if (User.Identity.IsAuthenticated && User.IsInRole(nameof(TypeUser.client)))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="ShoppingCart">עגלת קניות</a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
