--- a/WebApplication2/WebApplication2/Views/productImages/Create.cshtml
+++ b/WebApplication2/WebApplication2/Views/productImages/Create.cshtml
@@ -30,7 +30,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+	<a asp-controller="Product" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
