--- a/WebApplication2/WebApplication2/Views/Orders/Delete.cshtml
+++ b/WebApplication2/WebApplication2/Views/Orders/Delete.cshtml
@@ -5,30 +5,50 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
+<h1>מחיקה</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>האם אתה בטוח שברצונך למחוק את ההזמנה הזאת?</h3>
 <div>
-    <h4>Order</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Total)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Total)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Status)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+    <div class="order">
+        <div class="order-detailes">
+            <div>
+                <span class="description">@Html.DisplayNameFor(model => model.Total)</span>:
+                <span>@Html.DisplayFor(model => model.Total)</span>
+            </div>
+            <div>
+                <span class="description">@Html.DisplayNameFor(model => model.Status)</span>:
+                @switch (Model.Status)
+                {
+                    case OrderStatuses.OPEN:
+                        <span>פתוח</span>
+                        break;
+                    case OrderStatuses.WAITING:
+                        <span>ממתין לטיפול</span>
+                        break;
+                    case OrderStatuses.IN_PROCESS:
+                        <span>בטיפול</span>
+                        break;
+                    case OrderStatuses.CLOSE:
+                        <span>סגור</span>
+                        break;
+                }
+            </div>
+        </div>
+        <form class="" asp-action="Delete">
+            <input type="hidden" asp-for="Id" />
+            <input type="submit" value="מחק" class="btn btn-danger delete" />
+            <a asp-action="Index" class="btn btn-secondary">ביטול</a>
+        </form>
+    </div>
 </div>
+
+<style>
+    .delete {
+        margin-left: 10px;
+    }
+    .order {
+        font-size: 20px;
+        font-weight: 500;
+    }
+</style>
