--- a/WebApplication2/WebApplication2/Views/Orders/Edit.cshtml
+++ b/WebApplication2/WebApplication2/Views/Orders/Edit.cshtml
@@ -5,9 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
+<h1>עריכה</h1>
 
-<h4>Order</h4>
+<h4>הזמנה</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -29,16 +29,24 @@
                 </select>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group action-buttons">
+                <input type="submit" value="שמור" class="btn btn-primary save" />
+                <div>
+                    <a class="btn btn-secondary" asp-action="Index">ביטול</a>
+                </div>
             </div>
         </form>
     </div>
 </div>
+<style>
+    .action-buttons {
+        display: flex;
+    }
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+    .save {
+        margin-left: 10px;
+    }
+</style>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
