--- a/WebApplication2/WebApplication2/Views/Orders/Index.cshtml
+++ b/WebApplication2/WebApplication2/Views/Orders/Index.cshtml
@@ -5,11 +5,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>הזמנות</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -46,9 +43,9 @@
 				}
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a class="btn btn-primary btn-sm" asp-action="Edit" asp-route-id="@item.Id">עריכה</a>
+                <a class="btn btn-secondary btn-sm" asp-action="Details" asp-route-id="@item.Id">פרטים</a> 
+                <a class="btn btn-danger btn-sm" asp-action="Delete" asp-route-id="@item.Id">מחיקה</a>
             </td>
         </tr>
 }
